F16 glade3 stomps our scroll policy, fix it
Problem is any time someone uses f16 glade3 to edit files, it's going to
strip out the policy again. Will just have to be dilligent.

--- a/src/vmm-add-hardware.ui
+++ b/src/vmm-add-hardware.ui
@@ -1550,6 +1550,8 @@ to connect to the virtual machine.</property>
                                           <object class="GtkScrolledWindow" id="scrolledwindow2">
                                             <property name="visible">True</property>
                                             <property name="can_focus">True</property>
+                                            <property name="hscrollbar_policy">automatic</property>
+                                            <property name="vscrollbar_policy">automatic</property>
                                             <property name="shadow_type">etched-in</property>
                                             <child>
                                               <object class="GtkTreeView" id="host-device">
