--- a/src/vmm-clone.ui
+++ b/src/vmm-clone.ui
@@ -772,6 +772,7 @@
                                     <property name="visible">True</property>
                                     <property name="can_focus">True</property>
                                     <property name="hscrollbar_policy">never</property>
+                                    <property name="vscrollbar_policy">automatic</property>
                                     <child>
                                       <object class="GtkViewport" id="viewport1">
                                         <property name="visible">True</property>
