--- a/src/vmm-create-interface.ui
+++ b/src/vmm-create-interface.ui
@@ -1227,6 +1227,8 @@
                                                           <object class="GtkScrolledWindow" id="scrolledwindow3">
                                                             <property name="visible">True</property>
                                                             <property name="can_focus">True</property>
+                                                            <property name="hscrollbar_policy">automatic</property>
+                                                            <property name="vscrollbar_policy">automatic</property>
                                                             <property name="shadow_type">etched-in</property>
                                                             <child>
                                                             <object class="GtkTreeView" id="ipv6-address-list">
@@ -1992,6 +1994,8 @@
                           <object class="GtkScrolledWindow" id="scrolledwindow1">
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
+                            <property name="hscrollbar_policy">automatic</property>
+                            <property name="vscrollbar_policy">automatic</property>
                             <property name="shadow_type">etched-in</property>
                             <child>
                               <object class="GtkTreeView" id="interface-list">
