--- a/src/vmm-manager.ui
+++ b/src/vmm-manager.ui
@@ -402,6 +402,8 @@
                   <object class="GtkScrolledWindow" id="scrolledwindow1">
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
+                    <property name="hscrollbar_policy">automatic</property>
+                    <property name="vscrollbar_policy">automatic</property>
                     <child>
                       <object class="GtkTreeView" id="vm-list">
                         <property name="visible">True</property>
