prefs: Clarify 'force shortcut' tooltip a bit

--- a/src/vmm-preferences.ui
+++ b/src/vmm-preferences.ui
@@ -478,7 +478,7 @@
                                   <object class="GtkLabel" id="label15">
                                     <property name="visible">True</property>
                                     <property name="can_focus">False</property>
-                                    <property name="tooltip_text" translatable="yes">Force console menu accelerators while the console is active. Enabling this may overwrite keyboard interaction with the guest.</property>
+                                    <property name="tooltip_text" translatable="yes">Force console menu accelerators while the console is active. Enabling this may override keyboard interaction with the guest.</property>
                                     <property name="label" translatable="yes">Force console keyboard shortcuts:</property>
                                   </object>
                                   <packing>
