--- a/src/vmm-preferences.ui
+++ b/src/vmm-preferences.ui
@@ -42,6 +42,23 @@
       </row>
     </data>
   </object>
+  <object class="GtkListStore" id="liststore3">
+    <columns>
+      <!-- column-name gchararray1 -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0">Default</col>
+      </row>
+      <row>
+        <col id="0">Raw</col>
+      </row>
+      <row>
+        <col id="0">QCOW2</col>
+      </row>
+    </data>
+  </object>
   <object class="GtkWindow" id="vmm-preferences">
     <property name="can_focus">False</property>
     <property name="border_width">12</property>
@@ -542,7 +559,7 @@
                           <object class="GtkTable" id="table4">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="n_rows">2</property>
+                            <property name="n_rows">6</property>
                             <property name="column_spacing">8</property>
                             <child>
                               <object class="GtkAlignment" id="alignment6">
@@ -634,6 +651,39 @@
                                 <property name="top_attach">3</property>
                                 <property name="bottom_attach">4</property>
                                 <property name="x_options">GTK_FILL</property>
+                                <property name="x_padding">5</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkLabel" id="label25">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">Default storage format for new disk images.</property>
+                                <property name="xalign">0</property>
+                                <property name="label" translatable="yes">Default storage format:</property>
+                              </object>
+                              <packing>
+                                <property name="top_attach">4</property>
+                                <property name="bottom_attach">5</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <object class="GtkComboBox" id="prefs-storage-format">
+                                <property name="visible">True</property>
+                                <property name="can_focus">False</property>
+                                <property name="tooltip_text" translatable="yes">Default storage format for new disk images.</property>
+                                <property name="model">liststore3</property>
+                                <signal name="changed" handler="on_prefs_storage_format_changed" swapped="no"/>
+                                <child>
+                                  <object class="GtkCellRendererText" id="cellrenderertext3"/>
+                                  <attributes>
+                                    <attribute name="text">0</attribute>
+                                  </attributes>
+                                </child>
+                              </object>
+                              <packing>
+                                <property name="top_attach">5</property>
+                                <property name="bottom_attach">6</property>
                                 <property name="x_padding">5</property>
                               </packing>
                             </child>
