--- a/src/vmm-migrate.ui
+++ b/src/vmm-migrate.ui
@@ -459,7 +459,7 @@
                                                 <property name="visible">True</property>
                                                 <property name="can_focus">False</property>
                                                 <property name="xalign">0</property>
-                                                <property name="label" translatable="yes">Mbps</property>
+                                                <property name="label" translatable="yes">MB/s</property>
                                               </object>
                                               <packing>
                                                 <property name="expand">True</property>
